<resources>
    <string name="app_name">Laundry</string>
    <string name="card_pelanggan_id">ID Pelanggan</string>
    <string name="Layanan_Laundry">Judul_Layanan</string>
    <string name="card_setrika">ID Setrika</string>
    <string name="card_cuci_biasa">ID Cuci Biasa</string>
    <string name="card_cuci_sepatu">ID Cuci Sepatu</string>
    <string name="Tambah_Pelanggan">Judul_Pelanggan</string>
    <string name="nama_lengkap">nama_lengkap</string>
    <string name="Alamat">Alamat</string>
    <string name="No_Hp_aktif">No Hp</string>
    <string name="button_simpan">BT Simpan</string>
    <string name="validasi_nama_pelanggan">Nama Pelanggan</string>
    <string name="validasi_alamat_pelanggan">Alamat</string>
    <string name="validasi_cabang_pelanggan">Cabang</string>
    <string name="validasi_nohp_pelanggan">No Hp</string>
    <string name="sukses_simpan_pelanggan">Sukses Simpan Pelanggan</string>
    <string name="gagal_simpan_pelanggan">Gagal Simpan Pelanggan</string>
    <string name="sukses_simpan_pegawai">suksessimpanpegawai</string>
    <string name="gagal_simpan_pegawai">gagal simpan pegawai</string>
    <string name="card_pegawai_id">card pegawai id</string>
    <string name="card_pegawai_nama">card pegawai nama</string>
    <string name="card_pegawai_alamat">card pegawai alamat</string>
    <string name="card_pelanggan_hubungi">card pelanggan hubungi</string>
    <string name="card_pelanggan_lihat">card pelanggan lihat</string>
    <string name="card_pelanggan_nohp">card pelanggan nohp</string>
    <string name="card_pelanggan_cabang">card_pelanggan_cabang</string>
    <string name="add">add</string>
    <string name="nama_cabang">nama_cabang</string>
    <string name="activity_layanan_harga">layanan_harga</string>
    <string name="berhasil_tambah_layanan">berhasil_tambah_layanan</string>
    <string name="layanan_tambah_gagal">layanan_tambah_gagal</string>
    <string name="validasi_nama_pegawai">validasi_nama_pegawai</string>
    <string name="validasi_alamat_pegawai">validasi_alamat_pegawai</string>
    <string name="validasi_nohp_pegawai">validasi_nohp_pegawai</string>
    <string name="validasi_cabang_pegawai">validasi_cabang_pegawai</string>
    <string name="activity_login_nohp">activity_login_nohp</string>
    <string name="activity_login_password">activity_login_password</string>
    <string name="activity_tambahpegawai">activity_tambahpegawai</string>
    <string name="activity_NamaLengkap">activity_NamaLengkap</string>
    <string name="activity_Alamat">activity_Alamat</string>
    <string name="Activity_Cabang">Activity_Cabang</string>
    <string name="card_pelanggan_alamat">card_pelanggan_alamat</string>
    <string name="card_pelanggan_nama">card_pelanggan_nama</string>
    <string name="namalaporan">namalaporan</string>
    <string name="idpelanggan">idpelanggan</string>
    <string name="sunting_idpelanggan">sunting_idpelanggan</string>
    <string name="sunting_namapelanggan">sunting_namapelanggan</string>
    <string name="sunting_alamat">sunting_alamat</string>
    <string name="sunting_NoHP">sunting_NoHP</string>
    <string name="sunting_Cabang">sunting_Cabang</string>
    <string name="sunting_Terdaftar">sunting_Terdaftar</string>
    <string name="sunting_Sunting">sunting_Sunting</string>
    <string name="sunting_Hapus">sunting_Hapus</string>
    <string name="sunting_DetailPelanggan">sunting_DetailPelanggan</string>
    <string name="edit_EditPelanggan">edit_EditPelanggan</string>
    <string name="edit_cabang">edit_cabang</string>
    <string name="invoice_IDTransaksi">invoice_IDTransaksi</string>
    <string name="invoice_Tanggal">invoice_Tanggal</string>
    <string name="invoice_NamaPelanggan">invoice_NamaPelanggan</string>
    <string name="invoice_nohp">invoice_nohp</string>
    <string name="invoice_status">invoice_status</string>
    <string name="invoice_rincian_tambahan">invoice_rincian_tambahan</string>
    <string name="invoice_subtotal_tambahan">invoice_subtotal_tambahan</string>
    <string name="invoice_TotalBayar">invoice_TotalBayar</string>
    <string name="invoice_kirimwhatsapp">invoice_kirimwhatsapp</string>
    <string name="invoice_CetaknInvoice">invoice_CetaknInvoice</string>
    <string name="edit_EditPegawai">edit_EditPegawai</string>
    <string name="akun_DataProfile">akun_DataProfile</string>
    <string name="akun_NamaLengkap">akun_NamaLengkap</string>
    <string name="akun_Password">akun_Password</string>
    <string name="akun_EditProfile">akun_EditProfile</string>
    <string name="akun_SignOut">akun_SignOut</string>
    <string name="lihatpegawai_IDPegawai">lihatpegawai_IDPegawai</string>
    <string name="lihatpegawai_NamaPegawai">lihatpegawai_NamaPegawai</string>
    <string name="lihatpegawai_DetailPegawai">lihatpegawai_DetailPegawai</string>
    <string name="main_EstimasiHariIni">main_EstimasiHariIni</string>
    <string name="main_Transaksi">main_Transaksi</string>
    <string name="main_Pelanggan">main_Pelanggan</string>
    <string name="main_Laporan">main_Laporan</string>
    <string name="main_Akun">main_Akun</string>
    <string name="main_Pegawai">main_Pegawai</string>
    <string name="main_Cabang">main_Cabang</string>
    <string name="main_Printer">main_Printer</string>
    <string name="main_Tambahan">main_Tambahan</string>
    <string name="main_Layanan">main_Layanan</string>
    <string name="main_Siapmelayanipelanggandengansetulushati">main_Siapmelayanipelanggandengansetulushati</string>
    <string name="greeting_morning">greeting_morning</string>
    <string name="greeting_afternoon">greeting_afternoon</string>
    <string name="greeting_evening">greeting_evening</string>
    <string name="greeting_night">greeting_night</string>
    <string name="layanan_NamaLayanan">layanan_NamaLayanan</string>
    <string name="layanan_HargaLayanan">layanan_HargaLayanan</string>
    <string name="layanan_NamaCabanglayanan">layanan_NamaCabanglayanan</string>
    <string name="dialogmod_Pembayaran">dialogmod_Pembayaran</string>
    <string name="dialogmod_PilihMetodePembayaran">dialogmod_PilihMetodePembayaran</string>
    <string name="dialogmod_BayarNanti">dialogmod_BayarNanti</string>
    <string name="dialogmod_Tunai">dialogmod_Tunai</string>
    <string name="dialogmod_QRIS">dialogmod_QRIS</string>
    <string name="dialogmod_EWallet">dialogmod_EWallet</string>
    <string name="datatransaksi_NamaPelanggan">datatransaksi_NamaPelanggan</string>
    <string name="datatransaksi_NoHP">datatransaksi_NoHP</string>
    <string name="datatransaksi_PilihPelanggan">datatransaksi_PilihPelanggan</string>
    <string name="datatransaksi_DataPelanggan">datatransaksi_DataPelanggan</string>
    <string name="datatransaksi_LayananUtama">datatransaksi_LayananUtama</string>
    <string name="datatransaksi_NamaLayanan">datatransaksi_NamaLayanan</string>
    <string name="datatransaksi_Harga">datatransaksi_Harga</string>
    <string name="datatransaksi_pilihlayanan">datatransaksi_pilihlayanan</string>
    <string name="datatransaksi_LayananTambahan">datatransaksi_LayananTambahan</string>
    <string name="datatransaksi_Tambahan">datatransaksi_Tambahan</string>
    <string name="datatransaksi_proses">datatransaksi_proses</string>
    <string name="datapelanggan_Terdaftar">datapelanggan_Terdaftar</string>
    <string name="customer_name_label">customer_name_label</string>
    <string name="customer_phone_label">customer_phone_label</string>
    <string name="cancel_customer_selection">cancel_customer_selection</string>
    <string name="service_name_label">service_name_label</string>
    <string name="service_price_label">service_price_label</string>
    <string name="cancel_service_selection">cancel_service_selection</string>
    <string name="cancel_additional_service_selection">cancel_additional_service_selection</string>
    <string name="format_id">format_id</string>
    <string name="format_no_hp">format_no_hp</string>
    <string name="format_nama">format_nama</string>
    <string name="format_alamat">format_alamat</string>
    <string name="tambahan_LayananTambahan">tambahan_LayananTambahan</string>
    <string name="tambahan_harga">tambahan_harga</string>
    <string name="tambahan_NamaLayananTambahan">tambahan_NamaLayananTambahan</string>
    <string name="tambah_layanan">tambah_layanan</string>
    <string name="Nama_Layanan">Nama_Layanan</string>
    <string name="Masukkan_Nama_Layanan">Masukkan_Nama_Layanan</string>
    <string name="Harga_Layanan">Harga_Layanan</string>
    <string name="Masukkan_Harga_Layanan">Masukkan_Harga_Layanan</string>
    <string name="Simpan">Simpan</string>
    <string name="error_nama_layanan_kosong">error_nama_layanan_kosong</string>
    <string name="error_harga_layanan_kosong">error_harga_layanan_kosong</string>
    <string name="error_harga_bukan_angka">error_harga_bukan_angka</string>
    <string name="Berhasil_simpan_layanan">Berhasil_simpan_layanan</string>
    <string name="Gagal_simpan_layanan">Gagal_simpan_layanan</string>
    <string name="Edit_Pegawai">Edit_Pegawai</string>
    <string name="layanan">layanan</string>
    <string name="Konfirmasi_Data">Konfirmasi_Data</string>
    <string name="Batal">Batal</string>
    <string name="Pembayaran">Pembayaran</string>


</resources>