<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_margin="20dp">

    <!-- Data Pelanggan -->
    <TextView
        android:text="@string/datatransaksi_DataPelanggan"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/montserratextrabold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvNamaPelanggan"
        android:text="@string/datatransaksi_NamaPelanggan"
        android:fontFamily="@font/monsterratbold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvPelangganNoHP"
        android:text="@string/datatransaksi_NoHP"
        android:fontFamily="@font/monsterratbold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_pilih_pelanggan"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/datatransaksi_PilihPelanggan"
        android:fontFamily="@font/montserratregular"
        android:textColor="#fff"
        android:backgroundTint="#4CCEFF"
        android:layout_marginTop="8dp" />

    <!-- Layanan Utama -->
    <TextView
        android:text="@string/datatransaksi_LayananUtama"
        android:fontFamily="@font/montserratextrabold"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvNamaLayanan"
        android:text="@string/datatransaksi_NamaLayanan"
        android:fontFamily="@font/monsterratbold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvLayananHarga"
        android:text="@string/datatransaksi_Harga"
        android:fontFamily="@font/monsterratbold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_pilih_layanan"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/datatransaksi_pilihlayanan"
        android:textColor="#fff"
        android:backgroundTint="#4CCEFF"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserratregular"/>

    <!-- Layanan Tambahan -->
    <TextView
        android:text="@string/datatransaksi_LayananTambahan"
        android:fontFamily="@font/montserratextrabold"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_tambahan"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp"/>

    <!-- Tombol Bawah -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_tambahan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/datatransaksi_Tambahan"
            android:textColor="#fff"
            android:backgroundTint="#FFC107"/>

        <Button
            android:id="@+id/btn_proses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/datatransaksi_proses"
            android:textColor="#fff"
            android:backgroundTint="#4CAF50"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

</LinearLayout>
