<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/CVDATA_TRANSAKSI_PELANGGAN"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    cardElevation="4dp"
    android:orientation="vertical"
    app:layout_constraintTop_toTopOf="parent"
    app:cardCornerRadius="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvDataIDPelanggan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_pelanggan_id"
            android:fontFamily="@font/monsterratbold"
            />
        <TextView
            android:id="@+id/tvDataNamaPelanggan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratregular"
            android:text="@string/card_pelanggan_nama"
            android:textSize="24sp"
            android:layout_marginTop="16dp"
            />
        <TextView
            android:id="@+id/tvDataNoHpPelanggan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratregular"
            android:text="@string/card_pelanggan_nohp"
            android:textSize="16sp"
            android:paddingTop="8dp"
            />
        <TextView
            android:id="@+id/tvDataAlamatPelanggan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratregular"
            android:text="@string/card_pelanggan_alamat"
            android:textSize="16sp"
            android:paddingTop="8dp"
            />
    </LinearLayout>
</androidx.cardview.widget.CardView>