<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tambah_layanan"
        android:fontFamily="@font/monsterratbold"
        android:textSize="24sp"
        android:textAlignment="center"
        android:paddingTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/containerNamaLayanan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Nama_Layanan"
            android:fontFamily="@font/poppinsregular"
            android:textSize="16sp"
            android:layout_marginBottom="12dp"/>

        <EditText
            android:id="@+id/etNamaLayananTambahan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Masukkan_Nama_Layanan"
            android:padding="16dp"
            android:textAlignment="textStart"
            android:background="@drawable/rounded_black"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerHargaLayanan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/containerNamaLayanan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Harga_Layanan"
            android:fontFamily="@font/poppinsregular"
            android:textSize="16sp"
            android:layout_marginBottom="12dp"/>

        <EditText
            android:id="@+id/etHargaLayananTambahan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Masukkan_Harga_Layanan"
            android:inputType="number"
            android:padding="16dp"
            android:textAlignment="textStart"
            android:background="@drawable/rounded_black"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnSimpanTambahan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Simpan"
        android:textSize="16sp"
        android:padding="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/containerHargaLayanan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#6494ef"
        android:textColor="#fff"
        android:fontFamily="@font/monsterratbold"/>
</androidx.constraintlayout.widget.ConstraintLayout>
