<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_konfirmasi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_margin="20dp">

    <!-- Judul -->
    <TextView
        android:id="@+id/tv_judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Konfirmasi_Data"
        android:fontFamily="@font/monsterratbold"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp" />

    <!-- Nama Pelanggan -->
    <TextView
        android:id="@+id/tv_nama_pelanggan_konfirmasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/monsterratbold"
        android:text="@string/card_pelanggan_nama"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!-- No HP -->
    <TextView
        android:id="@+id/tv_no_hp_konfirmasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No HP"
        android:textSize="16sp"
        android:layout_marginBottom="16dp" />

    <!-- Layanan -->
    <TextView
        android:id="@+id/tv_nama_layanan_konfirmasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layanan"
        android:fontFamily="@font/monsterratbold"
        android:textSize="16sp"
        android:textStyle="bold" />

    <!-- Harga Layanan -->
    <TextView
        android:id="@+id/tv_harga_layanan_konfirmasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rp.0"
        android:textSize="16sp"
        android:layout_marginBottom="16dp" />

    <!-- Label Tambahan -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tambahan_LayananTambahan"
        android:fontFamily="@font/monsterratbold"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    <!-- RecyclerView Tambahan -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tambahan_konfirmasi"
        android:layout_width="match_parent"
        android:layout_height="266dp"
        android:layout_marginBottom="16dp" />

    <!-- Total Bayar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invoice_TotalBayar"
            android:fontFamily="@font/poppinsregular"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_total_bayar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rp0,00"

            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppinsregular"
            android:textStyle="bold"
            android:textSize="18sp" />
    </LinearLayout>

    <!-- Tombol Aksi -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:gravity="center">

        <Button
            android:id="@+id/btn_batal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Batal"
            android:fontFamily="@font/monsterratbold"
            android:backgroundTint="@android:color/holo_orange_light"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_pembayaran"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Pembayaran"
            android:fontFamily="@font/monsterratbold"
            android:backgroundTint="@android:color/holo_green_dark"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>
