<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    card_view:cardCornerRadius="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_id_tambahan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tambahan_LayananTambahan"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/monsterratbold"/>

        <TextView
            android:id="@+id/tv_nama_tambahan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tambahan_NamaLayananTambahan"
            android:textSize="20sp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppinsregular"/>
        <TextView
            android:id="@+id/tv_harga_tambahan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tambahan_harga"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppinsregular"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>